// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > IRadioButtons > should render correctly 1`] = `
"<div class="checkable-button-group -light -md -radio -default -light -md radio-buttons" name="radio-buttons" role="radiogroup">
  <!-- @slot default Slot for default content -->
  <!-- @slot prepend Slot for rendering additional content before buttons --><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 1</span>
  </button><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 2</span>
  </button><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 3</span>
  </button><!-- @slot append Slot for rendering additional content after buttons -->
</div>"
`;

exports[`Components > IRadioButtons > should render group variant correctly 1`] = `
"<div class="checkable-button-group -light -md -radio -group -light -md radio-buttons button-group -md -light" name="radio-buttons" role="group">
  <!-- @slot default Slot for default button group content -->
  <!-- @slot prepend Slot for rendering additional content before buttons --><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 1</span>
  </button><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 2</span>
  </button><button type="button" tabindex="0" aria-live="polite" tag="button" class="button -light -md">
    <!--v-if--><span class="button-content"><!-- @slot default Slot for default button content --><!-- @slot option Slot for rendering radio buttons options content -->Option 3</span>
  </button><!-- @slot append Slot for rendering additional content after buttons -->
</div>"
`;
